[gd_scene load_steps=5 format=2]

[ext_resource path="res://EscMenu.glb" type="PackedScene" id=1]
[ext_resource path="res://EscMenu.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.96097, 0.223644, 0.4565 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1.07525, 0.14927, 0.354035 )

[node name="EscMenu" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="StaticBody" type="StaticBody" parent="Continue" index="0"]
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="Continue/StaticBody" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.98095, 0, -0.351252 )
shape = SubResource( 1 )

[node name="StaticBody" type="StaticBody" parent="Quit" index="0"]
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="Quit/StaticBody" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.945762, 0, -0.332857 )
shape = SubResource( 2 )
[connection signal="mouse_entered" from="Continue/StaticBody" to="." method="_on_Continue_mouse_entered"]
[connection signal="mouse_exited" from="Continue/StaticBody" to="." method="_on_Continue_mouse_exited"]
[connection signal="mouse_entered" from="Quit/StaticBody" to="." method="_on_Quit_mouse_entered"]
[connection signal="mouse_exited" from="Quit/StaticBody" to="." method="_on_Quit_mouse_exited"]
